# tact-notify

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: notify.yml
src/tact_notify/: __main__.py  auth.py  check.py  config.py  daily.py  models.py  notify.py  notion.py  notion_sync.py  probe.py  sakai.py  selftest.py  session.py  state.py
